# flam3-boinc

./: CMakeLists.txt  README.md  flam3-boinc.kdev4  main.cpp
flam3-3.0.1/src/: flam3.c  flam3.h  png.c  private.h  rect.c
